--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2,7 +2,7 @@
     "home_title" : "Url Shortener",
     "input_url_error" : "The URL does not have a correct format, example: https://www.google.com",
     "original": "Original:",
-    "short_url" : "Short:",
+    "short_url" : "Short Url:",
     "send_url" : "Send",
     "unknown_error": "Unknown Error"
 }
